--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+noopenh264 (2.1.1) eos; urgency=medium
+
+  * Update to match new upstream version and soname.
+
+ -- Seppo Yli-Olli <seppo.yliolli@gmail.com>  Tue, 26 May 2020 23:08:48 +0100
+
 noopenh264 (2.0.0) eos; urgency=low
 
   * Update to match new upstream version and soname.
