--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+noopenh264 (2.2.0) eos; urgency=medium
+
+  * Downgrade to 2.2.0, since 2.3.0 included a breaking change to
+    SEncParamExt.
+
+ -- Will Thompson <wjt@endlessos.org>  Mon, 12 Sep 2022 16:01:58 +0100
+
 noopenh264 (2.3.0) eos; urgency=medium
 
   * Update to match new upstream version.
